--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Brandon Valosek <bvalosek@gmail.com> (https://bvalosek.com)",
   "license": "MIT",
   "scripts": {
-    "postinstall": "gulp sass",
+    "build": "gulp sass",
     "start": "node ./app"
   },
   "dependencies": {
