--- a/circle.yml
+++ b/circle.yml
@@ -21,5 +21,5 @@ deployment:
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - docker push bvalosek/bvalosek.com
-      - kontena app deploy
+      - kontena app deploy -p bvalosek-com
 
